# ds3231_hd44780

./: Cargo.toml  LICENSE  README.md  memory.x  openocd.cfg
src/: display.rs  ds3231.rs  main.rs
