[package]
name = "ds3231_hd44780"
version = "0.1.0"
authors = ["Iurii Trezhzhenov <iurii@trezhzhenov.me>"]
edition = "2018"

[dependencies]
embedded-graphics = "0.6"

cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"

embedded-hal = "0.2"
heapless = "0.6"
onewire = "0.3"
hd44780-driver = "0.4"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f411"]

[[bin]]
name = "ds3231_hd44780"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
